...
  const [preTimerEnabled, setPreTimerEnabled] = useAtom(preTimerEnabledAtom);

  return (
    <SafeAreaView style={styles.container}>
      <View style={styles.header}>
        <IconButton
          testId="back-button"
          onPress={navigation.goBack}
          source={require('../assets/icons/arrow-left.png')}
        />
        <Text style={[textStyle, styles.headerText]}>{label('settings')}</Text>
        <IconButton
          testId={`style-button-${isDarkMode ? 'dark' : 'light'}`}
...
      <View style={styles.itemContainer}>
        <Text
          style={[textStyle, styles.label]}
          testID={`language-label-${language}`}>
          {label('changeLanguage')}
        </Text>
        <TextButton underline onPress={toggleLanguage} testID="language-button">
          {language === 'en' ? 'ESP' : 'ENG'}
        </TextButton>
      </View>
      <TouchableOpacity
        style={styles.github}
        onPress={() => Linking.openURL('https://github.com/DonArgos/timer')}>
...
