...
            ) : stopped ? (
              <>
                <FadeAnimatedView
                  layout={layout}
                  style={styles.settingsContainer}>
                  <IconButton
                    testId="settings-button"
                    onLongPress={__DEV__ ? enableTestMode : undefined}
                    onPress={() => {
                      setTimeout(() => {
                        setRenderScreen(false);
                      }, 300);
                      navigation.navigate(Screens.Settings);
...
            {!stopped && (
              <FadeAnimatedView layout={layout}>
                <TextButton style={styles.reset} onPress={onReset} largeText>
                  {label('restartButton')}
                </TextButton>
                <TextButton
                  testID="stop-button"
                  style={styles.stop}
                  onPress={onStop}
                  largeText>
                  {label('stopButton')}
                </TextButton>
              </FadeAnimatedView>
...
